[package]
name = "keepass4brute-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
keepass = "0.5"
indicatif = "0.17"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
crossbeam-channel = "0.5"

[profile.release]
# Optimize for size (z = smallest, s = small, 1-3 = speed)
opt-level = "z"  # or "s" for slightly faster but larger
lto = true
codegen-units = 1
strip = true
panic = "abort"